# sorare_ae_interview

./: .editorconfig  .gitignore  .sqlfluff  .sqlfluffignore  CODEOWNERS  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
analyses/: generate_base_model.sql  generate_source.sql
models/example/: my_first_dbt_model.sql
models/staging/so5/: _so5__sources.yml  stg_so5__users.sql
models/staging/us_sports/: _us_sports__sources.yml  stg_us_sports__baseball_users.sql  stg_us_sports__cards.sql  stg_us_sports__fixtures.sql  stg_us_sports__lineups.sql  stg_us_sports__players.sql  stg_us_sports__teams.sql
scripts/: activate_shell.sh  setup.sh
