[tool.poetry]
name = "dbt-sorare-snowflake"
readme = "README.md"
version = "0.1.0"
description = ""
authors = ["Manuel Pozo <manuelpozo@sorare.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.4"
dbt-snowflake = "^1.4"
dbt-cloud-cli = "^0.7"
elementary-data = {version = "^0.7", extras = ["snowflake"]}
sqlfluff = "2.0.0a4"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.50"
fire = "^0.5.0"
pre-commit = "^2.21.0"
pycountry = "^22.3.5"
python-json-logger = "^2.0.4"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
